<resources>
    <string name="app_name">Buzz Buzz Store: Beta</string>
    <string name="izzy_knox">I&#160;&#160;Z&#160;&#160;Z&#160;&#160;Y &#160;&#160; &amp; &#160;&#160; K&#160;&#160;N&#160;&#160;O&#160;&#160;X&#160;&#160; &#169; &#160;&#160;2&#160;&#160;0&#160;&#160;2&#160;&#160;0</string>
    <string name="to_do">TODO</string>

    <!--The following strings are on the Phone Number Authentication Activity-->
    <string name="phone_number_text_view">Enter your phone number to sign in</string>
    <string name="skip">skip</string>
    <string name="send_text_msg">send text message</string>
    <string name="phone_number_hint">e.g. 096 XXX XXXX</string>

    <!--The following strings are on the Verify Number Authentication Activity-->
    <string name="verify_number_text_view">Enter the verification code</string>
    <string name="back">back</string>
    <string name="verify">verify</string>
    <string name="resend_otp">resend code</string>
    <string name="otp_hint">_&#160;&#160;_&#160;&#160;_&#160;&#160;&#160;&#160;_&#160;&#160;_&#160;&#160;_</string>
    <string name="phone_number_error_text">Please enter a valid phone number</string>
</resources>