<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Authentication"
    tools:context=".authentication.VerifyPhoneNumberActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button"
        app:layout_constraintVertical_bias="0.39">

        <TextView
            android:id="@+id/verify_phone_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/verify_number_text_view"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/verify_phone_number_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_phone_number_textview"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/otp_hint"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/otp_hint"
            android:inputType="phone"
            android:maxLength="6"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            tools:ignore="ContentDescription,LabelFor" />

        <Button
            android:id="@+id/verify_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_phone_number_edittext"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/verify"
            android:textColor="@color/buttonTextColor" />

        <Button
            android:id="@+id/resend_code_button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/verify_button"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:background="@android:color/black"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/resend_otp"
            android:textColor="@color/textButtonColor" />
    </RelativeLayout>

    <TextView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/back"
        android:textAllCaps="true"
        android:textColor="@color/textButtonColor"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/sending_otp_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>