<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Authentication"
    tools:context=".authentication.PhoneNumberActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/skip_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/phone_number_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/textColor"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/phone_number_text_view"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/phone_number_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/phone_number_error_text"
            android:textAlignment="viewStart"
            android:textSize="15.5sp"
            android:textColor="@color/phone_number_error_text"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/phone_number_edittext"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_textview"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/white"
            android:contentDescription="@string/phone_number_hint"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            tools:ignore="ContentDescription,LabelFor" />

        <Button
            android:id="@+id/send_text_message"
            android:layout_width="250dp"
            android:background="@drawable/authentication_background_button"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_number_edittext"
            android:layout_centerInParent="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/send_text_msg"
            android:textColor="@color/buttonTextColor" />
    </RelativeLayout>

    <TextView
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textColor="@color/textButtonColor"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/sending_phone_number_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        app:layout_constraintVertical_bias="0.397" />

</androidx.constraintlayout.widget.ConstraintLayout>